fix: add border to sub-navigation and left-align imprint on mobile (#153)
* fix: left-align imprint on small breakpoint

* fix: add border to sub-navigation

* fix: remove non-breaking hyphens

* fix: improve text alignment of imprint

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -252,6 +252,7 @@ main {
         display: flex;
         flex-direction: row;
         border-radius: 30px;
+        border: 1px solid white;
         padding: 5px 0.8rem;
         justify-content: center;
         height: 40px;
@@ -372,13 +373,13 @@ em {
   align-items: center;
   justify-content: center;
   .imprint-box {
+    width: 90%;
     display: flex;
     flex-direction: column;
-    align-items: center;
     h1 {
       color: #f7f7f7;
       font-family: 'space-grotesk-bold';
-      font-size: 25px;
+      font-size: 1.6rem;
       padding-bottom: 20px;
     }
     p {
@@ -386,6 +387,12 @@ em {
       strong {
         font-family: 'space-grotesk-bold';
       }
+      span {
+        display: inline-block;
+      }
+    }
+    @include media.sm {
+      text-align: center;
     }
   }
 }
